# ludus

./: .gitignore  Cargo.toml  README.md  angular.json  install.sh  package-lock.json  package.json
.github/workflows/: release.yml
src/: gpus.rs  main.rs  system_info.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: app.component.html  app.component.ts
