[package]
name = "ludus"
version = "2.0.8"
edition = "2024"
description = "Es una aplicación open source desarrollada con Rust + floem, enfocada en Linux, cuyo objetivo es ofrecer diagnóstico, gestión y optimización de GPUs en un entorno unificado y moderno."
authors = ["Wuilmer <wilmermorgado24@gmail.com>"]
repository = "https://github.com/wuilmerj24/ludus.git"
readme = "README.md"
license = "MIT"
keywords = ["gpu", "linux", "gui", "floem", "diagnostics"]
categories = ["gui", "hardware-support", "os::linux-apis"]

[dependencies]
floem = { git = "https://github.com/lapce/floem.git", branch = "main", features = ["tokio"] }
sysinfo = "0.39.3"
serde = "*"
all-smi = "0.22.0"
tokio = { version = "1.52.3", features = ["time", "rt-multi-thread"] }
tokio-stream = "0.1.18"


[profile.dev]
opt-level = 1

[package.metadata.packager]
before-packaging-command = "cargo build --release"
product-name = "Ludus"
identifier = "com.wuilmerj24.ludus"
category = "Utility"
authors = ["wuilmerj24"]
icons = [
  "assets/ludus.png"
]